# OS_labs

lab1/: CMakeLists.txt
lab1/Creator/: Creator.cpp  Main.cpp  Reporter.cpp  employee.h
lab2/: CMakeLists.txt  ThreadsLab.cpp  ThreadsLab.h  ThreadsLib.cpp  test_threads.cpp
lab3/: CMakeLists.txt  lab3_os.vcxproj  lab3_os.vcxproj.filters  main.cpp
lab3/x64/Debug/: lab3_os.exe.recipe  lab3_os.ilk  vc143.idb
lab3/x64/Debug/lab3_os.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab3_os.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab4/: CMakeLists.txt  lab4_os.cpp
lab4/src/Receiver/: Receiver.cpp
lab4/src/Sender/: Sender.cpp
lab4/src/Shared/: QueueHeader.h
lab4/tests/: QueueTest.cpp
lab_5/: CMakeLists.txt
lab_5/src/client/: pipe_client.cpp  pipe_client.h
lab_5/src/common/: employee.h  messages.h
lab_5/src/server/: pipe_server.h  server_main.cpp
src/client/: client_main.cpp
src/common/: pipe_constants.h
src/server/: file_manager.cpp  file_manager.h  pipe_server.cpp  request_handler.cpp  request_handler.h
tests/: test_employee.cpp
